# ha-bosch-ebike-flow

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
custom_components/bosch_ebike/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_tracker.py  helpers.py  manifest.json  sensor.py  strings.json
custom_components/bosch_ebike/api/: __init__.py  _base.py  activity.py  antitheft.py  auth.py  bike.py  client.py
custom_components/bosch_ebike/translations/: en.json
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_device_tracker.py  test_ha_setup.py  test_sensor_values.py  test_token_manager.py
tests/fixtures/: activity_summaries.json  bike_profiles.json  latest_locations.json  registrations.json  state_of_charge.json
