[project]
name = "bosch-flow-ha"
version = "1.0.0"
description = "Bosch eBike Flow — Home Assistant custom integration"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "authlib>=1.5.2",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "codespell>=2.3",
    "homeassistant>=2025.12.0",
    "mypy>=1.14",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-homeassistant-custom-component>=0.13.236",
    "ruff>=0.9",
    "types-requests>=2.32",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "TCH",    # HA uses runtime imports, not TYPE_CHECKING blocks
    "SIM105", # try/except/pass is clearer than contextlib.suppress in tests
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.bosch_ebike"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.codespell]
skip = ".venv,*.lock,*.json"
ignore-words-list = "hass"
